# NLP-movie-review

./: 01_eda.ipynb  02_bow_model.ipynb  03_tfidf_model.ipynb  04_embeddings_model.ipynb  06_bert_model.ipynb  README.md  pyproject.toml
