[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
